--- a/vera-ui/src/app/travel/view-auth-forms/view-auth-forms.component.scss
+++ b/vera-ui/src/app/travel/view-auth-forms/view-auth-forms.component.scss
@@ -22,3 +22,22 @@ div {
   background-color: $secondary;
   color: white;
 }
+
+
+.wrapper {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.wrapper ul {
+  overflow: hidden;
+  margin: 0 -10px;
+  padding: 0;
+  list-style: none;
+}
+
+.wrapper li {
+  float: left;
+  width: calc(33.333333% - 20px);
+  margin: 0 10px 20px 10px;
+}
